fixed problem with z-index

--- a/src/components/GameRegistration/style.less
+++ b/src/components/GameRegistration/style.less
@@ -163,6 +163,7 @@
 
       .operator {
         width: 28% !important;
+        z-index: 10;
       }
     }
   }
@@ -574,6 +575,7 @@
   .tovar {
     position: relative;
     margin-top: 17.7vw;
+    z-index: 10;
     @media @desktop {
       margin-top: 0;
     }
